# django-training

./: .gitignore  README.md
musicplatform/: RESULTS.md  db.sqlite3  pyproject.toml  pytest.ini
musicplatform/albums/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_album_isapproved.py  0002_initial.py  0003_rename_isapproved_album_approved.py  0004_alter_album_approved.py  0005_remove_album_creation_datetime_album_created_and_more.py  0006_remove_album_created.py  0007_album_created.py  0008_rename_release_datetime_album_released.py  0009_remove_album_modified_alter_album_created.py  0010_album_modified_alter_album_created.py  0011_song.py  0012_alter_song_name.py  0013_alter_song_audio_alter_song_image_alter_song_name.py  0014_alter_song_name.py
musicplatform/albums/tests/: test_serializers.py  test_views.py
musicplatform/artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py  0002_alter_artist_social_link.py  0002_initial.py
musicplatform/artists/tests/: test_views.py
musicplatform/authentication/: serializers.py  urls.py  views.py
musicplatform/authentication/tests/: fixtures.py  test_views.py
musicplatform/musicplatform/: forms.py  settings.py  urls.py  views.py
musicplatform/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
musicplatform/users/migrations/: 0001_initial.py
musicplatform/users/tests/: test_views.py
(+4 files in other folders)
