[tool.poetry]
name = "django-training"
version = "0.1.0"
description = ""
authors = ["Moustafa Mohamed <darsh.m7md@gmail.com>"]
readme = "README.md"
packages = [{include = "django_training"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
